--- a/site1-main/website/package.json
+++ b/site1-main/website/package.json
@@ -13,7 +13,8 @@
     "express-session": "^1.17.3",
     "dotenv": "^16.3.1",
     "passport": "^0.6.0",
-    "passport-discord": "^0.1.4"
+    "passport-discord": "^0.1.4",
+    "node-fetch": "^2.6.7"
   },
   "engines": {
     "node": "18.x"
